movie-genre-tensorflow/k8s/istio-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tensor-movie
spec:
  hosts:
  - "*"
  gateways:
  - seldon-gateway
  http:
  - match:
    - port: 80
    route:
    - destination:
        host: tensor-movie
        port:
          number: 9000
